feat: add flight list screen

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
 EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
 EXPO_PUBLIC_FIREBASE_APP_ID=your_firebase_app_id_here
 
+
+# Flight API Configuration
+EXPO_PUBLIC_SKY_SCRAPPER_API_KEY=your_rapidapi_key_here
+EXPO_PUBLIC_SKY_SCRAPPER_API_HOST=sky-scrapper.p.rapidapi.com
+EXPO_PUBLIC_SKY_SCRAPPER_BASE_URL=https://sky-scrapper.p.rapidapi.com/api/v1
+EXPO_PUBLIC_SKY_SCRAPPER_BASE_URL_V2=https://sky-scrapper.p.rapidapi.com/api/v2
