--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "google-flights-app",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,17 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@gorhom/bottom-sheet": "^5.1.6",
     "@hookform/resolvers": "^5.1.1",
-    "@react-navigation/native": "^7.1.14",
-    "@react-navigation/native-stack": "^7.3.21",
+    "@react-native-community/datetimepicker": "^8.4.2",
+    "@tanstack/react-query": "^5.83.0",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.17",
+    "expo-font": "~13.3.2",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-router": "~5.1.3",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.10.0",
+    "lottie-react-native": "^7.2.4",
     "react": "19.0.0",
     "react-hook-form": "^7.60.0",
     "react-native": "0.79.5",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "^4.11.1",
+    "react-native-calendars": "^1.1313.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
     "react-native-svg": "15.11.2",
     "zod": "^4.0.5"
   },
