--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-svg": "15.11.2",
-    "zod": "^4.0.5"
+    "zod": "^4.0.5",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
